2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 353/bsps
	* include/bsp.h: Let the application override the network driver
	and attach routine.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Add FreeBSD SYSCTL() sections for networking.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* 3c509/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* ne2000/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* timer/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* wd8003/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_OUTPUT_BUILD_SUBDIRS.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-13     Eric Norum <eric.norum@usask.ca>

        * start/start16.S: Remove unwanted + at beginning of relative
        numeric label.

2002-09-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove duplicate timer/Makefile in AC_CONFIG_FILES.

2002-08-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Add $(PROJECT_INCLUDE)/rtems to
	PREINSTALL_FILES.
	* console/mouse_parser.c: Include <string.h> (for strcmp).
	* console/vt.c: Include <string.h> (for memcpy).