@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../../../../../../aclocal
 # wrapup is the one that actually builds and installs the library
 #  from the individual .rel files built in other directories
 SUBDIRS = . include tools start startup clock console timer ne2000 wd8003 \
-    3c509 wrapup
+    3c509 ide wrapup
 
 include $(top_srcdir)/../../bsp.am
 
